# api/swagger.yaml
@@ -94,6 +94,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CreateAccountResponse"
+    get:
+      tags:
+        - Accounts
+      summary: List user accounts
+      security: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ListUserAccountsRequest"
+        required: true
+      responses:
+        "500":
+          description: Internal error
+          content: { }
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ListUserAccountsResponse"
 
 components:
   parameters:
@@ -172,9 +193,6 @@ components:
     CreateAccountRequest:
       type: object
       properties:
-        user_id:
-          type: integer
-          example: 1
         currency:
           type: string
           example: RUB
@@ -182,15 +200,44 @@ components:
     CreateAccountResponse:
       type: object
       properties:
-        account_number:
+        account:
+          $ref: '#/components/schemas/AccountItem'
+
+    ListUserAccountsRequest:
+      type: object
+      properties:
+        user_id:
+          type: integer
+          example: 1
+
+    ListUserAccountsResponse:
+      type: object
+      properties:
+        accounts:
+          type: array
+          items:
+            $ref: '#/components/schemas/AccountItem'
+
+
+    AccountItem:
+      type: object
+      properties:
+        number:
           type: string
           example: fb33fd0e-6782-11ed-9022-0242ac120002
+        user_id:
+          type: integer
+          example: 1
         currency:
           type: string
           example: RUB
+        cents:
+          type: integer
+          example: 10000
         created_at:
           type: string
-          example: '2006-1-2'
+          example: 2006-1-2
+
 
     BasicResponse:
       type: object
