# internal/api/controller/account.go
@@ -17,3 +17,16 @@ func (c *Controller) CreateAccount(ctx *fiber.Ctx) error {
 	}
 	return ctx.JSON(response)
 }
+
+func (c *Controller) ListUserAccounts(ctx *fiber.Ctx) error {
+	request := &dto.ListUserAccountsRequest{}
+	if err := Bind(ctx, request, ctx.BodyParser); err != nil {
+		return err
+	}
+
+	response, err := c.service.ListUserAccounts(ctx.Context(), request)
+	if err != nil {
+		return err
+	}
+	return ctx.JSON(response)
+}
